<resources><string name="app_name">ScheduleApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="serialNo">S.No</string>
    <string name="className">Class Name</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="roomNum">Room No</string>
    <string name="addBtn">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="ab5_312">AB5 312</string>
    <string name="_10_00">10:00</string>
    <string name="_9_00">9:00</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="pe_v">PE V</string>
    <string name="pe_vi">PE VI</string>
    <string name="pe_iv">PE IV</string>
    <string name="pe_iii">PE III</string>
    <string name="pe_vii">PE VII</string>
    <string name="oe">OE</string>
</resources>
