<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <EditText
        android:id = "@+id/Username"
        android:layout_width = "222dp"
        android:layout_height = "52dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="222dp"
        android:layout_height="52dp"
        android:layout_gravity="center_vertical"
        android:hint="@string/password" />

    <Button
        android:id="@+id/LoginBtn"
        android:layout_width="222dp"
        android:layout_height="52dp"
        android:layout_gravity="center_vertical"
        android:backgroundTint="#008000"
        android:text="@string/login" />

</LinearLayout>
